--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-        <a href="#home " class="navbar-brand page-scroll">Ridwan Maulana</a>
+        <a href="#home " class="navbar-brand page-scroll">Ridwan
+          <!-- <img alt="Brand" src="img/logo/big.png"> -->
+        </a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
@@ -45,7 +47,7 @@
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <div class="jumbotron text-center">
-      <img src="img/sandhika.png" class="img-circle">
+      <img src="img/ridwan.png" class="img-circle">
       <h1>Ridwan Maulana</h1>
       <p>IT Staff | Pelajar Web Programing</p>
     </div>
