--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class="row">
           <div class="col-sm-5 col-sm-offset-1" >
             <p>Saya Ridwan, pelajar pemrograman web otodidak dari Jakarta. 
-              Saya telah menyelesaikan sarjana teknik informatika dan bekerja selama 10 tahun di Instansi Pemerintah.
+              Saya telah menyelesaikan pendidikan bidang teknik informatika. Sya bekerja selama 10 tahun di Instansi Pemerintah.
               Salah satu tupoksi saya memberikan dukungan dan solusi permasalahan IT baik software, hardware, jaringan dan aplikasi pendididkan,
-              selain itu pengaggaran keuangan, analisis dan rekapitulasi data dan Tim Pendataan Aplikasi Pendidikan.
+              selain itu pengaggaran keuangan, analisis dan rekapitulasi data serta ikut berperan dalam Tim Pendataan Aplikasi Pendidikan.
             </p>
                
           </p>
@@ -78,7 +78,7 @@
 
           <div class="col-sm-5">
             <p>Saya merasa perlu belajar hal baru, di tahun 2019 bulan Juli saya memutuskan menekuni kembali tentang pemrograman web. <span class="bold-span">Waktunya untuk perubahan</span>,
-              di waktu luang dan hari libur saya belajar pemrograman web yang di dokumentasikan dalam <a href="">Github</a><br/>
+              di waktu luang dan hari libur saya belajar pemrograman web yang di dokumentasikan dalam <a href="https://github.com/ridwanarkan">Github</a>.
               Saya dapat berkomunikasi dengan baik, siap untuk belajar hal baru, bersemangat, pekerja keras dan jujur</p>.
 
           </div>
@@ -111,10 +111,10 @@
         <div class="col-sm-6 col-sm-offset-3">
             <p>Situs web ini sedang anda lihat. Saya menerapkan tema warna yang sederhana dengan efect animation scroll ketika ada perpindahan menu. Situs ini akan terus dikembangkan karena pada saat ini saya sedang mempelajari tentang dunia pemrograman web.</p>
             <h3>Bootstrap | Jquery | Css</h3>
-            <a href="#about" class="page-scroll">
+            <a href="https://ridwanarkan.github.io/port/" class="page-scroll">
                <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
             </a>
-            <a href="#about" class="page-scroll">
+            <a href="https://github.com/ridwanarkan/port" class="page-scroll">
                <button class="button" style="vertical-align:middle"><span>Sumber </span></button>
             </a>
         </div>
