--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-        <a href="#home " class="navbar-brand page-scroll">Ridwan
-          <!-- <img alt="Brand" src="img/logo/big.png"> -->
+        <a href="#home " class="navbar-brand page-scroll">
+          <img alt="Brand" src="img/logo.png">
         </a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
