--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           </ul>
         </div>
 
+
     </div>
   </nav>
 
@@ -99,7 +100,7 @@
             <hr>
           </div>
         </div>
-
+        <!-- Portfolio Bootstrap 3 -->
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <a href="" class="thumbnail">
@@ -110,7 +111,7 @@
 
         <div class="col-sm-6 col-sm-offset-3">
             <p>Situs web ini sedang anda lihat. Saya menerapkan tema warna yang sederhana dengan efect animation scroll ketika ada perpindahan menu. Situs ini akan terus dikembangkan karena pada saat ini saya sedang mempelajari tentang dunia pemrograman web.</p>
-            <h3>Bootstrap | Jquery | Css</h3>
+            <h3>Bootstrap | Jquery | CSS</h3>
             <a href="https://ridwanarkan.github.io/port/" class="page-scroll">
                <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
             </a>
@@ -118,7 +119,49 @@
                <button class="button" style="vertical-align:middle"><span>Sumber </span></button>
             </a>
         </div>
+        <!-- Akhir Portfolio Bootstrap 3 -->
 
+        <!-- Portfolio Simple Page -->
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+              <a href="" class="thumbnail">
+                <img src="img/portfolio/simple.png">
+              </a>
+            </div>
+          </div>
+  
+          <div class="col-sm-6 col-sm-offset-3">
+              <p>Implementasi dari latihan css layouting dengan memanfaatkan box model, float dan sedikit animasi pada judul website.</p>
+              <h3>CSS Box Model | CSS Float | CSS Animation</h3>
+              <a href="https://ridwanarkan.github.io/simple/" class="page-scroll">
+                 <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
+              </a>
+              <a href="https://github.com/ridwanarkan/simple/" class="page-scroll">
+                 <button class="button" style="vertical-align:middle"><span>Sumber </span></button>
+              </a>
+          </div>
+          <!-- Akhir Portfolio Simple Page-->
+
+        <!-- Portfolio SmokeEffecs -->
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+              <a href="" class="thumbnail">
+                <img src="img/portfolio/smoke.png">
+              </a>
+            </div>
+          </div>
+  
+          <div class="col-sm-6 col-sm-offset-3">
+              <p>Implementasi dari latihan css animasi dan pseudo dengan sedikit effect blur yand dipadukan dengan video asap.</p>
+              <h3>Pure CSS | CSS Animation</h3>
+              <a href="https://ridwanarkan.github.io/smoke/" class="page-scroll">
+                 <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
+              </a>
+              <a href="https://github.com/ridwanarkan/smoke" class="page-scroll">
+                 <button class="button" style="vertical-align:middle"><span>Sumber </span></button>
+              </a>
+          </div>
+          <!-- Akhir Portfolio Smoke Efffects-->
       </div>
     </section>
     <!-- akhir portfolio -->
