tambah portfolio lightbox

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <div class="col-sm-5">
             <p>Saya merasa perlu belajar hal baru, di tahun 2019 bulan Juli saya memutuskan menekuni kembali tentang pemrograman web. <span class="bold-span">Waktunya untuk perubahan</span>,
-              di waktu luang dan hari libur saya belajar pemrograman web yang di dokumentasikan dalam <a href="https://github.com/ridwanarkan">Github</a>.
+              di waktu luang dan hari libur saya belajar pemrograman web yang di dokumentasikan dalam <a href="https://github.com/ridwanarkan" target="blank">Github</a>.
               Saya dapat berkomunikasi dengan baik, siap untuk belajar hal baru, bersemangat, pekerja keras dan jujur</p>.
 
           </div>
@@ -103,7 +103,7 @@
         <!-- Portfolio Bootstrap 3 -->
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
-            <a href="" class="thumbnail">
+            <a href="https://ridwanarkan.github.io/port/" target="blank" class="thumbnail">
               <img src="img/portfolio/portofolio.png">
             </a>
           </div>
@@ -112,10 +112,10 @@
         <div class="col-sm-6 col-sm-offset-3">
             <p>Situs web ini sedang anda lihat. Saya menerapkan tema warna yang sederhana dengan efect animation scroll ketika ada perpindahan menu. Situs ini akan terus dikembangkan karena pada saat ini saya sedang mempelajari tentang dunia pemrograman web.</p>
             <h3>Bootstrap | Jquery | CSS</h3>
-            <a href="https://ridwanarkan.github.io/port/" class="page-scroll">
+            <a href="https://ridwanarkan.github.io/port/" class="page-scroll" target="blank">
                <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
             </a>
-            <a href="https://github.com/ridwanarkan/port" class="page-scroll">
+            <a href="https://github.com/ridwanarkan/port" class="page-scroll" target="blank">
                <button class="button" style="vertical-align:middle"><span>Sumber </span></button>
             </a>
         </div>
@@ -124,7 +124,7 @@
         <!-- Portfolio Simple Page -->
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
-              <a href="" class="thumbnail">
+              <a href="https://ridwanarkan.github.io/simple/" target="blank" class="thumbnail">
                 <img src="img/portfolio/simple.png">
               </a>
             </div>
@@ -133,10 +133,10 @@
           <div class="col-sm-6 col-sm-offset-3">
               <p>Implementasi dari latihan css layouting dengan memanfaatkan box model, float dan sedikit animasi pada judul website.</p>
               <h3>CSS Box Model | CSS Float | CSS Animation</h3>
-              <a href="https://ridwanarkan.github.io/simple/" class="page-scroll">
+              <a href="https://ridwanarkan.github.io/simple/" class="page-scroll" target="blank">
                  <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
               </a>
-              <a href="https://github.com/ridwanarkan/simple/" class="page-scroll">
+              <a href="https://github.com/ridwanarkan/simple/ target="blank"" class="page-scroll">
                  <button class="button" style="vertical-align:middle"><span>Sumber </span></button>
               </a>
           </div>
@@ -145,7 +145,7 @@
         <!-- Portfolio SmokeEffecs -->
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
-              <a href="" class="thumbnail">
+              <a href="https://ridwanarkan.github.io/smoke/" target="blank" class="thumbnail">
                 <img src="img/portfolio/smoke.png">
               </a>
             </div>
@@ -154,14 +154,38 @@
           <div class="col-sm-6 col-sm-offset-3">
               <p>Implementasi dari latihan css animasi dan pseudo dengan sedikit effect blur yand dipadukan dengan video asap.</p>
               <h3>Pure CSS | CSS Animation</h3>
-              <a href="https://ridwanarkan.github.io/smoke/" class="page-scroll">
+              <a href="https://ridwanarkan.github.io/smoke/" class="page-scroll" target="blank">
                  <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
               </a>
-              <a href="https://github.com/ridwanarkan/smoke" class="page-scroll">
+              <a href="https://github.com/ridwanarkan/smoke target="blank"" class="page-scroll">
                  <button class="button" style="vertical-align:middle"><span>Sumber </span></button>
               </a>
           </div>
           <!-- Akhir Portfolio Smoke Efffects-->
+
+          
+
+        <!-- Portfolio Lightbox -->
+        <div class="row">
+          <div class="col-sm-6 col-sm-offset-3">
+            <a href="https://ridwanarkan.github.io/lightbox/"  target="blank" class="thumbnail">
+              <img src="img/portfolio/lightbox.png">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-sm-offset-3">
+          <p>Gallery Lightbox ini merupakan Implementasi dari pembelajaran css 3. Gallery ini dbuat dengan metode target html dan CSS 3 diantaranya property text shadow, box shadow, transition dan animation</p>
+          <h3>HTML | CSS 3</h3>
+          <a href="https://ridwanarkan.github.io/lightbox/" class="page-scroll" target="blank">
+             <button class="button" style="vertical-align:middle"><span>Kunjungi </span></button>
+          </a>
+          <a href="https://github.com/ridwanarkan/lightbox" target="blank" class="page-scroll">
+             <button class="button" style="vertical-align:middle" ><span>Sumber </span></button>
+          </a>
+        </div>
+        </div>
+        <!-- Akhir Portfolio Lightbox-->
       </div>
     </section>
     <!-- akhir portfolio -->
